package Player;

public abstract class BaseMedia implements Media{
    protected String filename;
}
