package Player;

public interface Media {
    void play();
    String getFilename();
}
