package Player;

public class MediaPlayerFacade {
    public void playMedia(Media media){
        media.play();
    }
}
