package Player;

public interface Platform {
    void decode(String filename);
}
